// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop should render badge correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  color: #ffffff;
  background-color: #ff5757;
  border-color: #ffffff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 16px;
  height: 16px;
  padding: 0 4px;
  border: 1px solid;
  border-radius: 0.25rem;
  font-size: 12px;
  line-height: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

.c1 .c2 {
  position: absolute;
  top: 0;
  right: 8px;
}

<div
  class="c0 c1"
>
  <button
    type="button"
  >
    btn
  </button>
  <div
    class="c2 c3 c4"
    color="light"
    style="opacity: 1; transform-origin: right; transform: scale(1) translateX(50%);"
  >
    2
  </div>
</div>
`;

exports[`Backdrop should render customized badge correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  color: #ffffff;
  background-color: #51c81c;
  border-color: #ffffff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 16px;
  height: 16px;
  padding: 0 4px;
  border: 1px solid;
  border-radius: 0.25rem;
  font-size: 12px;
  line-height: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

.c1 .c2 {
  position: absolute;
  top: 0;
  right: 8px;
}

<div
  class="c0 c1"
>
  <button
    type="button"
  >
    btn
  </button>
  <div
    class="c2 c3 c4"
    color="light"
    style="opacity: 1; transform-origin: right; transform: scale(1) translateX(50%);"
  >
    16
  </div>
</div>
`;

exports[`Backdrop should render standalone badge correctly 1`] = `
.c0 {
  box-sizing: border-box;
  color: #ffffff;
  background-color: #ff5757;
  border-color: #ffffff;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 16px;
  height: 16px;
  padding: 0 4px;
  border: 1px solid;
  border-radius: 0.25rem;
  font-size: 12px;
  line-height: 1;
}

<div
  class="c0 c1"
  color="light"
  style="opacity: 1; transform-origin: center; transform: scale(1);"
>
  2
</div>
`;
